include/altdss/capi/dss.h

    /*! 
    Array of strings with all XYCurve names.

    (API Extension)
    */
    ALTDSS_CAPI_DLL void XYCurves_Get_AllNames(char*** ResultPtr, int32_t* ResultDims);
    ALTDSS_CAPI_DLL void XYCurves_Set_Xshift(double Value);
    /*! 
    Amount to scale Y values from original curve. Represents a curve shift.
    */
    ALTDSS_CAPI_DLL void XYCurves_Set_Yscale(double Value);
    ALTDSS_CAPI_DLL void XYCurves_Set_Yshift(double Value);
    ALTDSS_CAPI_DLL int32_t XYCurves_Get_idx(void);
    ALTDSS_CAPI_DLL void XYCurves_Set_idx(int32_t Value);