src/CAPI/CAPI_XYCurves.pas

    
    pXYCurve.FXScale := Value;
end;
//------------------------------------------------------------------------------
procedure XYCurves_Set_Xshift(Value: Double); CDECL;
var
    pXYCurve: TXYCurveObj;
begin
    if not _activeObj(DSSPrime, pXYCurve) then
    begin
        DoSimpleMsg(DSSPrime, 'No active %s object found! Activate one and retry.', ['XYCurve'], 51010);
        Exit;
    end;

    pXYCurve.FXShift := Value;
end;
//------------------------------------------------------------------------------
procedure XYCurves_Set_Yscale(Value: Double); CDECL;
var
    pXYCurve: TXYCurveObj;
begin
    if not _activeObj(DSSPrime, pXYCurve) then
    begin
        DoSimpleMsg(DSSPrime, 'No active %s object found! Activate one and retry.', ['XYCurve'], 51010);
        Exit;
    end;

    pXYCurve.FYScale := Value;
end;
//------------------------------------------------------------------------------
procedure XYCurves_Set_Yshift(Value: Double); CDECL;
var
    pXYCurve: TXYCurveObj;
begin
    if not _activeObj(DSSPrime, pXYCurve) then
    begin
        DoSimpleMsg(DSSPrime, 'No active %s object found! Activate one and retry.', ['XYCurve'], 51010);
        Exit;
    end;

    pXYCurve.FYShift := Value;
end;
//------------------------------------------------------------------------------
function XYCurves_Get_idx(): Integer; CDECL;
begin
    Result := DSSPrime.XYCurveClass.ElementList.ActiveIndex
end;
//------------------------------------------------------------------------------
procedure XYCurves_Set_idx(Value: Integer); CDECL;
begin
    if (DSSPrime.XYCurveClass.ElementList.Get(Value) = NIL) then
        DoSimpleMsg(DSSPrime, 'Invalid %s index: "%d".', ['XYCurve', Value], 656565);
end;
//------------------------------------------------------------------------------
procedure XYCurves_Get_AllNames(var ResultPtr: PPAnsiChar; ResultCount: PAPISize); CDECL;
begin
    if InvalidCircuit(DSSPrime) then
    begin
        DefaultResult(ResultPtr, ResultCount);
        Exit;
    end;
    Generic_Get_AllNames(ResultPtr, ResultCount, DSSPrime.XYCurveClass.ElementList, False);
end;

procedure XYCurves_Get_AllNames_GR(); CDECL;
// Same as XYCurves_Get_AllNames but uses global result (GR) pointers
begin
    XYCurves_Get_AllNames(DSSPrime.GR_DataPtr_PPAnsiChar, @DSSPrime.GR_Counts_PPAnsiChar[0])
end;
//------------------------------------------------------------------------------
end.
